# rins-kappa

./: README.md
src/exercise6/: CMakeLists.txt  package.xml
src/exercise6/launch/: custom_console.conf  find_cylinder.launch
src/exercise6/msg/: Detection.msg
src/exercise6/scripts/: detect_rings  face_detector_node  face_localizer_dlib  face_localizer_dlib_new
src/exercise6/scripts/color_classify/: classify.py
src/exercise6/scripts/color_classify/trained_models/: cg_hsv_rf_10bin.model  cg_hsv_rf_10bin_nocrop.model  cg_hsv_rf_30bin.model  (+10 more)
src/exercise6/src/: cylinder_segmentation.cpp  cylinder_segmentation_backup.cpp
src/exercise8/scripts/: extract_qr
src/main/: CMakeLists.txt  package.xml
src/main/launch/: detector_nodes.launch
src/main/scripts/: aproaching.py  aproaching_class_old.py  aproachingclass.py  cylinder_filter.py  cylinder_filter_backup.py  exploration.py  explorationclass.py  extend_retract_arm.py  extract_qr  extract_qr.py  face_filter.py  face_ring_wrapper.py  goals_client.py  main.py
src/navigation_stack/: CMakeLists.txt  package.xml
src/navigation_stack/launch/: amcl_simulation.launch  gmapping_simulation.launch
src/navigation_stack/launch/includes/: move_base.launch.xml
src/navigation_stack/maps/: ok_map.pgm  ok_map.xcf  ok_map.yaml
src/navigation_stack/param/: costmap_common_params.yaml  dwa_local_planner_params.yaml
src/world/world/: CMakeLists.txt  package.xml
src/world/world/launch/: custom_console.conf  rins_world.launch
src/world/world/scripts/: extend_arm.py  move_arm.py
src/world/world/worlds/: rins_task2.world
